# battleship

./: .gitignore  CMakeLists.txt  README.md
src/: clientgame.cpp  clientgame.h  main.cpp  map.cpp  map.h  renderer.cpp  renderer.h  servergame.cpp  servergame.h
src/network/: client.h  connection.h  message.h  msgs.h  server.h
